--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ android/local.properties
 android/proguard-project.txt
 android/res/drawable-*/
 code/libfrogger3d_android.so
+android/ant.properties
